--- a/scss/first.scss
+++ b/scss/first.scss
@@ -1,44 +1,49 @@
 @import '_mixins';
 @import '_variables';
+@import '_mediaQueries';
 
 .large-screen-header {
-    @include grid-flex(grid, null, 1fr 5fr, center, null);
-    border-bottom: 1px solid #c7c7c7;
-}
 
-@media only screen and (max-width: 575.98px) {
-    .large-screen-header {
-        display: none;
+    @media only screen and (max-width: 575.98px) {
+        & {
+            display: none;
+        }
+    }
+
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            display: none;
+        }
+    }
+
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            display: none;
+        }
+    }
+
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            display: grid;
+            @include grid-flex(grid, null, 1fr 5fr, center, null);
+            border-bottom: 1px solid #c7c7c7;
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            display: grid;
+            @include grid-flex(grid, null, 1fr 5fr, center, null);
+            border-bottom: 1px solid #c7c7c7;
+        }
     }
 }
 
-/* Small devices (landscape phones, 576px and up) */
-@media only screen and (min-width: 576px) and (max-width: 767.98px) {
-    .large-screen-header {
-        display: none;
-    }
-}
 
-/* // Medium devices (tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 991.98px) {
-    .large-screen-header {
-        display: none;
-    }
-}
-
-/* Large devices (desktops, 992px and up) */
-@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
-    .large-screen-header {
-        display: none;
-    }
-}
-
-/* // Extra large devices (large desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-    .large-screen-header {
-        display: grid;
-    }
-}
 
 .logo-container {
     height: 13vh;
@@ -48,7 +53,19 @@
 
 .logo-inner-container {
     @include grid-flex(grid, null, 1fr 1.5fr, center, center);
-    width: 80%;
+
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            width: 100%;
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            width: 80%;
+        }
+    }
 }
 
 .nav-container {
@@ -67,13 +84,26 @@ button {
 
 .nav-link-container {
     @include grid(grid, null, 1fr 1fr 1fr 3fr);
-    width: 60%;
+
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            width: 80%;
+        }
+    }
+
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            width: 60%;
+        }
+    }
 
     & button {
         @extend button;
         height: 54px;
         @include all-flex(flex, row, center, center, center, center);
     }
+
 }
 
 .logo-name {
@@ -122,7 +152,7 @@ button {
 /* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
     .first-section {
-        @include grid(grid, null, 1fr);
+        @include grid(grid, null, 1fr 5fr);
     }
 }
 
@@ -134,7 +164,6 @@ button {
 }
 
 .first-icon-container {
-    height: 105vh;
     border-right: 1px solid #c7c7c7;
 
     @media only screen and (max-width: 575.98px) {
@@ -160,7 +189,8 @@ button {
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
-            display: none;
+            display: block;
+            height: 70vh;
         }
     }
 
@@ -168,6 +198,7 @@ button {
     @media only screen and (min-width: 1200px) {
         & {
             display: block;
+            height: 105vh;
         }
     }
 }
@@ -201,7 +232,7 @@ button {
 /* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
     .first-main-container {
-        @include grid(grid, null, 1fr);
+        @include grid(grid, null, 5fr 1fr);
     }
 }
 
@@ -239,7 +270,7 @@ button {
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
-            display: none;
+            display: flex;
         }
     }
 
@@ -270,14 +301,14 @@ button {
     /* // Medium devices (tablets, 768px and up) */
     @media only screen and (min-width: 768px) and (max-width: 991.98px) {
         & {
-            height: 150vh;
+            height: 110vh;
         }
     }
 
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
-            height: 150vh;
+            height: 80vh;
         }
     }
 
@@ -295,31 +326,31 @@ button {
     @media only screen and (max-width: 575.98px) {
         & {
             width: 90%;
-            @include grid(grid, 25vh 63vh 20vh 40vh, null);
+            @include grid(grid, 25vh 63vh 17vh 40vh, null);
         }
     }
 
     /* Small devices (landscape phones, 576px and up) */
     @media only screen and (min-width: 576px) and (max-width: 767.98px) {
         & {
-            width: 80%;
-            @include grid(grid, 17vh 35vh 18vh 12vh, null);
+            width: 90%;
+            @include grid(grid, 25vh 50vh 17vh 40vh, null);
         }
     }
 
     /* // Medium devices (tablets, 768px and up) */
     @media only screen and (min-width: 768px) and (max-width: 991.98px) {
         & {
-            width: 80%;
-            @include grid(grid, 17vh 35vh 18vh 12vh, null);
+            width: 90%;
+            @include grid(grid, 15vh 40vh 15vh 30vh, null);
         }
     }
 
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
-            width: 80%;
-            @include grid(grid, 17vh 35vh 18vh 12vh, null);
+            width: 92%;
+            @include grid(grid, 12vh 30vh 10vh 12vh, null);
         }
     }
 
@@ -381,21 +412,25 @@ button {
     /* Small devices (landscape phones, 576px and up) */
     @media only screen and (min-width: 576px) and (max-width: 767.98px) {
         & {
-            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+            @include flex(flex, row, null, null);
+            grid-row: 1/2;
+            grid-column: 1/3;
+            justify-content: space-between;
+            width: 45%;
         }
     }
 
     /* // Medium devices (tablets, 768px and up) */
     @media only screen and (min-width: 768px) and (max-width: 991.98px) {
         & {
-            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+            display: none;
         }
     }
 
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
-            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+            display: none;
         }
     }
 
@@ -419,21 +454,22 @@ button {
     /* Small devices (landscape phones, 576px and up) */
     @media only screen and (min-width: 576px) and (max-width: 767.98px) {
         & {
-            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+            grid-row: 3/3;
+            grid-column: 3/3;
         }
     }
 
     /* // Medium devices (tablets, 768px and up) */
     @media only screen and (min-width: 768px) and (max-width: 991.98px) {
         & {
-            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+            display: none;
         }
     }
 
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
-            @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+            display: none;
         }
     }
 
@@ -469,14 +505,14 @@ button {
         /* // Medium devices (tablets, 768px and up) */
         @media only screen and (min-width: 768px) and (max-width: 991.98px) {
             & {
-                @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+                @include font-style($Roboto, 4rem, normal, 700, null, null, null);
             }
         }
 
         /* Large devices (desktops, 992px and up) */
         @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
             & {
-                @include font-style($Roboto, 2.81rem, normal, 700, null, null, null);
+                @include font-style($Roboto, 3.6rem, normal, 700, null, null, null);
             }
         }
 
@@ -505,21 +541,23 @@ button {
         /* Small devices (landscape phones, 576px and up) */
         @media only screen and (min-width: 576px) and (max-width: 767.98px) {
             & {
-                @include font-style($Roboto, 1rem, normal, 500, -2%, null, 43.39px);
+                @include font-style($Roboto, 1.3rem, normal, 500, -2%, null, 43.39px);
+                width: 100%;
             }
         }
 
         /* // Medium devices (tablets, 768px and up) */
         @media only screen and (min-width: 768px) and (max-width: 991.98px) {
             & {
-                @include font-style($Roboto, 1rem, normal, 500, -2%, null, 43.39px);
+                @include font-style($Roboto, 1.69rem, normal, 500, -2%, null, 43.39px);
+                width: 80%;
             }
         }
-
         /* Large devices (desktops, 992px and up) */
         @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
             & {
-                @include font-style($Roboto, 1rem, normal, 500, -2%, null, 43.39px);
+                @include font-style($Roboto, 1.69rem, normal, 500, -2%, null, 43.39px);
+                width: 80%;
             }
         }
 
@@ -551,7 +589,8 @@ button {
     /* Small devices (landscape phones, 576px and up) */
     @media only screen and (min-width: 576px) and (max-width: 767.98px) {
         & {
-            @include grid(grid, 10vh 10vh, null);
+            @include grid(grid, 12vh 15vh, null);
+            grid-row-gap: 20px;
         }
     }
 
@@ -565,7 +604,8 @@ button {
     /* Large devices (desktops, 992px and up) */
     @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
         & {
-            @include grid(grid, 10vh 10vh, null);
+            @include grid(grid, null, 1fr 2fr);
+            grid-column-gap: 50px;
         }
     }
 
@@ -578,33 +618,43 @@ button {
     }
 
     & p {
-        @include font-style($Roboto, 1.19rem, normal, 500, 0.02em, left, 30.86px);
-        @include flex(flex, row, center, null);
-
+        color: #707070;
         @media only screen and (max-width: 575.98px) {
             & {
                 width: 100%;
+                font-family: "Roboto Mono";
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 20px;
+                letter-spacing: 0.02em;
+                text-align: left;
             }
         }
 
         /* Small devices (landscape phones, 576px and up) */
         @media only screen and (min-width: 576px) and (max-width: 767.98px) {
             & {
-                width: 75%;
+                width: 100%;
+                @include font-style($Roboto, 1.19rem, normal, 500, 0.02em, left, 30.86px);
             }
         }
 
         /* // Medium devices (tablets, 768px and up) */
         @media only screen and (min-width: 768px) and (max-width: 991.98px) {
             & {
-                width: 75%;
+                width: 100%;
+                @include font-style($Roboto, 1.19rem, normal, 500, 0.02em, left, 30.86px);
+                @include flex(flex, row, center, null);
             }
         }
 
         /* Large devices (desktops, 992px and up) */
         @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
             & {
-                @include grid(grid, 10vh 10vh, null);
+                width: 75%;
+                @include font-style($Roboto, 1.19rem, normal, 500, 0.02em, left, 30.86px);
+                @include flex(flex, row, center, null);
             }
         }
 
@@ -612,6 +662,8 @@ button {
         @media only screen and (min-width: 1200px) {
             & {
                 width: 75%;
+                @include font-style($Roboto, 1.19rem, normal, 500, 0.02em, left, 30.86px);
+                @include flex(flex, row, center, null);
             }
         }
     }
@@ -662,7 +714,7 @@ button {
 /* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
     .mobile-device-header {
-        display: flex;
+        display: none;
     }
 }
 
@@ -729,14 +781,14 @@ button {
 /* // Medium devices (tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
     .hide-icon {
-        display: none;
+        display: grid;
     }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
     .hide-icon {
-        display: none;
+        display: grid;
     }
 }
 
